# go-board-vg-hw

./: .gitignore  CMakeLists.txt  Go_Board_Constraints.pcf  README.md
ch09.01-video-signals/: CMakeLists.txt  cocotb.mk  test-video-sync-generator.cpp  test_video_sync_generator.py  video_sync_generator_tb.v
ch10.01-test-pattern/: CMakeLists.txt  sdl_main.cpp  sdl_top.v  test_pattern.v  test_pattern_sdl_main.cpp  test_pattern_sdl_top.v  test_pattern_top.v  test_pattern_vga_top.v
ch10.01-test-pattern/lattice/: test_pattern_sbt.project  test_pattern_syn.prj
ch11.02-bitmapped-case/: CMakeLists.txt  bitmapped_case.v  bitmapped_case_sdl_main.cpp  bitmapped_case_sdl_top.v  bitmapped_case_vga_top.v
ch11.02-bitmapped-case/lattice/: bitmapped_case_sbt.project  bitmapped_case_syn.prj  bitmapped_digits_sbt.project
ch11.02-bitmapped-digits/: CMakeLists.txt  bitmapped_digits.v  bitmapped_digits_sdl_main.cpp  bitmapped_digits_sdl_top.v  bitmapped_digits_vga_top.v
ch11.02-bitmapped-digits/lattice/: bitmapped_digits_syn.prj
ch11.03-bitmapped-file/: CMakeLists.txt  bitmapped_file.v  bitmapped_file_bin.txt  bitmapped_file_sdl_main.cpp  bitmapped_file_sdl_top.v  bitmapped_file_vga_top.v
ch11.03-bitmapped-file/lattice/: bitmapped_file_sbt.project  bitmapped_file_syn.prj
ch12.01-ball-absolute/: CMakeLists.txt  ball_absolute.v  ball_absolute_sdl_main.cpp  ball_absolute_sdl_top.v  ball_absolute_vga_top.v
ch12.01-ball-absolute/lattice/: ball_absolute_sbt.project  ball_absolute_syn.prj
ch12.02-ball-absolute-mv/: CMakeLists.txt  ball_absolute.v  ball_absolute_mv_sdl_main.cpp  ball_absolute_mv_sdl_top.v  ball_absolute_mv_vga_top.v
ch12.02-ball-absolute-mv/lattice/: ball_absolute_mv_lse.prj  ball_absolute_mv_sbt.project  ball_absolute_mv_syn.prj  stdout.log.bak  synlog.tcl
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/: AutoConstraint_ball_absolute_mv_vga_top.sdc  ball_absolute_mv.edf  ball_absolute_mv.htm  ball_absolute_mv.sap  ball_absolute_mv.scf  ball_absolute_mv.srd  ball_absolute_mv.srm  ball_absolute_mv.srr  ball_absolute_mv_cck.rpt  ball_absolute_mv_scck.rpt  rpt_ball_absolute_mv_vga_top.areasrr  rpt_ball_absolute_mv_vga_top_areasrr.htm  run_options.txt  scratchproject.prs
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/backup/: ball_absolute_mv.srr
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/dm/: layer0.xdm
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/Temp/: sbt_temp.sdc
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/netlist/oadb-ball_absolute_mv_vga_top/BFPGA_DESIGN_ep/ball_absolute_mv_vga_top/INTERFACE/: netlist.oa
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/netlist/oadb-ball_absolute_mv_vga_top/BFPGA_DESIGN_pk/ball_absolute_mv_vga_top/INTERFACE/: netlist.oa
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/netlist/oadb-ball_absolute_mv_vga_top/BFPGA_DESIGN_pl/ball_absolute_mv_vga_top/INTERFACE/: netlist.oa
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/: ball_absolute_mv_vga_top_sbt.rpt
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/bitmap/: ball_absolute_mv_vga_top_bitmap.hex  ball_absolute_mv_vga_top_bitmap.nvcm  ball_absolute_mv_vga_top_bitmap_glb.txt  ball_absolute_mv_vga_top_bitmap_int.hex
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/packer/: ball_absolute_mv_vga_top_cell_sbt.pcf  ball_absolute_mv_vga_top_lgc_sbt.pcf  ball_absolute_mv_vga_top_pack.rpt  ball_absolute_mv_vga_top_pin_table.CSV
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/placer/: ball_absolute_mv_vga_top_pl.sdc  ball_absolute_mv_vga_top_sbt.edf  ball_absolute_mv_vga_top_sbt.pcf  packing_clustering.result
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/router/: ball_absolute_mv_vga_top.route  ball_absolute_mv_vga_top.rt_log  ball_absolute_mv_vga_top_router.rpt  cascad_info.txt
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/sbt/outputs/simulation_netlist/: ball_absolute_mv_vga_top_sbt.sdf  ball_absolute_mv_vga_top_sbt.v  ball_absolute_mv_vga_top_sbt.vhd  ball_absolute_mv_vga_top_sbt_vital.sdf
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/synlog/: ball_absolute_mv_compiler.srr  ball_absolute_mv_compiler.srr.rptmap  ball_absolute_mv_fpga_mapper.srr  ball_absolute_mv_fpga_mapper.szr  ball_absolute_mv_fpga_mapper.xck  ball_absolute_mv_multi_srs_gen.srr  ball_absolute_mv_premap.srr  ball_absolute_mv_premap.szr  syntax_constraint_check.rpt.rptmap
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/synlog/report/: ball_absolute_mv_compiler_errors.txt  ball_absolute_mv_compiler_notes.txt  ball_absolute_mv_compiler_runstatus.xml  ball_absolute_mv_compiler_warnings.txt  ball_absolute_mv_fpga_mapper_area_report.xml  ball_absolute_mv_fpga_mapper_combined_clk.rpt  ball_absolute_mv_fpga_mapper_notes.txt  ball_absolute_mv_fpga_mapper_opt_report.xml  ball_absolute_mv_fpga_mapper_resourceusage.rpt  ball_absolute_mv_fpga_mapper_runstatus.xml  ball_absolute_mv_fpga_mapper_timing_report.xml  ball_absolute_mv_fpga_mapper_warnings.txt  ball_absolute_mv_premap_notes.txt  ball_absolute_mv_premap_runstatus.xml  ball_absolute_mv_premap_warnings.txt
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/syntmp/: ball_absolute_mv.plg  ball_absolute_mv_srr.htm  ball_absolute_mv_toc.htm  run_option.xml  statusReport.html
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/synwork/: .cckTransfer  ball_absolute_mv_comp.fdep  ball_absolute_mv_comp.srs  ball_absolute_mv_mult.srs  ball_absolute_mv_prem.srd  layer0.fdep  layer0.srs  layer0.tlg
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/synwork/ball_absolute_mv_m_srm/: 1.srm  fileinfo.srm
ch12.02-ball-absolute-mv/lattice/ball_absolute_mv_Implmnt/synwork/ball_absolute_mv_mult_srs/: 1.srs  fileinfo.srs  skeleton.srs
common/rtl/: Video_Sync_Generator.v  nes_controller.v  reset_generator.v  synchronizer.v  video_sync_generator.v
common/src/: sdl_verilator_driver.h  sdl_window_container.h
(+2 files in other folders)
